overflow fix

--- a/home.css
+++ b/home.css
@@ -29,7 +29,7 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
-    overflow: hidden;
+
 }
 ::-webkit-scrollbar {
   width: 11px;
@@ -65,6 +65,7 @@ body{
     color:var(--text-color);
     font-size: 1rem;
     font-family: var(--monst);
+        overflow-x: hidden;
 }
 
 nav{
